<resources>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_vcard_type">default</string>
    <string name="config_export_dir">/mnt/sdcard</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="config_prohibited_phone_number_regexp" />
    <string name="tw_index_characters_kor">\#ABCDEFGHIJKLMNOPQRSTUVWXYZㄱㅎ</string>
    <string name="my_profile_default_name_for_aab">My Info</string>
    <string name="group_not_assigned">グループなし</string>
    <string name="group_favorite">お気に入り</string>
    <string name="group_all">すべて</string>
    <string name="account_docomo">Docomo</string>
    <string name="system_group_id_friend">Friends</string>
    <string name="system_group_id_family">Family</string>
    <string name="system_group_id_coworker">Coworkers</string>
    <string name="system_group_id_my_contacts">My Contacts</string>
    <string name="system_group_notes_friend">System Group: Friends</string>
    <string name="system_group_notes_family">System Group: Family</string>
    <string name="system_group_notes_coworker">System Group: Coworkers</string>
    <string name="system_group_id_ice">ICE</string>
    <string name="menu_au_server">au server Backup/Restore</string>
    <string name="friendsnote_not_found">Friends Note application is not found. Please download from au Market.</string>
    <string name="friendsnote_not_response">Friends Note application cannot lunch.</string>
    <string name="friendsnote_invalid">Friends Note is invalid. Try after validating it.</string>
    <string name="fail_to_find_postal_dialog_message">"“100-0014”
“1000014”
“永田町”
“千代田区永田町”"</string>
    <string name="too_many_find_postal_dialog_message">“永田町”→“千代田区永田町”</string>
    <string name="postal_provider_country">日本</string>
    <string name="postal_search_results">検索結果</string>
    <string name="launcherDialer">Phone</string>
    <string name="people">People</string>
    <string name="contactsList">Contacts</string>
    <string name="system_group_videocalling">Video calling</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct Dial</string>
    <string name="shortcutMessageContact">Direct Message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Select a contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favourites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="menu_addStar">Add to Favourites</string>
    <string name="added_to_favourites">Added to Favourites.</string>
    <string name="removed_from_favourites">Removed from Favourites.</string>
    <string name="menu_removeStar">Remove from Favourites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_share_via">Share via</string>
    <string name="move_to_knox">Move To Knox</string>
    <string name="knox_1">KNOX 1</string>
    <string name="knox_2">KNOX 2</string>
    <string name="remove_from_knox">Move To Personal Home</string>
    <string name="knox_move">Move</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="unable_to_add">Unable to add</string>
    <string name="maximum_number_in_rejectlist">Maximum number of auto reject numbers (%1$d) reached. Delete some items in Call settings</string>
    <string name="splitConfirmation_title">Separate contact</string>
    <string name="menu_joinAggregate">Link contact</string>
    <string name="titleJoinContactDataWith">Link contact</string>
    <string name="blurbJoinContactDataWith">Select contact to link with %s</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateRecommendation">Recommendation</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts linked</string>
    <string name="menu_set_ring_tone">Caller ringtone saved</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contacts lists</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts</string>
    <string name="syncableContactDeleteConfirmation">Deleting this contact when sync is enabled will delete the contact from the account it is saved under</string>
    <string name="syncableMultipleContactDeleteConfirmation">Deleting this contact when sync is enabled will also delete all linked contacts from other accounts</string>
    <string name="readOnlySimContactWarning">This contact will be deleted from your SIM card. Remember that you cannot add contacts to your SIM card</string>
    <string name="deleteConfirmation">This contact will be deleted</string>
    <string name="prompToDeleteConfrimation">Item will be removed</string>
    <string name="title_remove">Remove</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Job title</string>
    <string name="ghostData_department">Department</string>
    <string name="ghostData_description">Description</string>
    <string name="ghostData_org_postal">Company location</string>
    <string name="invalidContactMessage">Contact not found</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_wait">Add wait</string>
    <string name="call_settings">Call settings</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="menu_contact_counter">Contact counter</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_view_names_as">Display contacts by</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_findContacts">Search</string>
    <string name="contactsContactsLabel">Contacts</string>
    <string name="menu_add_to_private">Set as Secret contact</string>
    <string name="menu_remove_from_private">Remove from Secret contact</string>
    <string name="menu_share_contact_info">Send contact information</string>
    <string name="menu_add_to_group">Add to group</string>
    <string name="menu_share_namecard_via">Share namecard via</string>
    <string name="menu_multiple_delete">Delete</string>
    <string name="menu_multiple_delete_for_tablet">Delete contacts</string>
    <string name="menu_merge">Merge accounts</string>
    <string name="menu_speed_dial_setting">Speed dial setting</string>
    <string name="menu_send">Send message/email</string>
    <string name="menu_send_email">Send email</string>
    <string name="menu_send_message">Send message</string>
    <string name="menu_copy_to_dialing">Copy to dialling screen</string>
    <string name="menu_place_on_home_screen">Add shortcut to home</string>
    <string name="menu_my_network">My network</string>
    <string name="add_member">Add member</string>
    <string name="remove_member">Remove from group</string>
    <string name="change_order">Change order</string>
    <string name="menu_create">Create</string>
    <string name="menu_delete_groups">Delete groups</string>
    <string name="showFilterPhones">Only contacts with phones</string>
    <string name="showFilterPhonesDescrip">Only display contacts that have phone numbers</string>
    <string name="service_numbers">Service numbers</string>
    <string name="send_contact">Send contact information</string>
    <string name="online_search">Online search</string>
    <string name="speed_dial_setting">Speed dial setting</string>
    <string name="enable_wifi_calling">WiFi Calling</string>
    <string name="onehand_mode_on">One-handed operation on</string>
    <string name="ripple_effect">Ripple effect</string>
    <string name="delete">Delete</string>
    <string name="send_number">Send number</string>
    <string name="view_contact">View contact</string>
    <string name="add_2_contacts">Add to contacts</string>
    <string name="add_2_block_list">Add to reject list</string>
    <string name="delete_from_block_list">Remove from reject list</string>
    <string name="view_by">View</string>
    <string name="call_duration">Call duration</string>
    <string name="video_call">Video call</string>
    <string name="done">Done</string>
    <string name="vcard_charset_settings">Contact Vcard code settings</string>
    <string name="txt_RAD_info_button">Help</string>
    <string name="menu_add_to_white_list">Add to white list</string>
    <string name="menu_add_to_black_list">Add to black list</string>
    <string name="menu_remove_from_white_list">Remove from white list</string>
    <string name="menu_remove_from_black_list">Remove from black list</string>
    <string name="intl_roaming_call">Intl roaming call</string>
    <string name="callback_call_133">**133 callback call</string>
    <string name="ip_call">IP call</string>
    <string name="menu_black_list_setting">Black list settings</string>
    <string name="menu_white_list_setting">White list settings</string>
    <string name="menu_backup">Backup</string>
    <string name="block_settings">Block settings</string>
    <string name="sim_management">SIM Management</string>
    <string name="eSurfing_dailup_title">eSurfing dial-up</string>
    <string name="lettering_activity_title">Instant lettering</string>
    <string name="menu_knox_move">Move to KNOX</string>
    <string name="menu_knox_personal_move">Move to Personal mode</string>
    <string name="ContactsYellowpage">Yellow Pages</string>
    <string name="restore">Restore</string>
    <string name="swipe_to_call_or_message">Swipe to call/send msgs</string>
    <string name="menu_namecard_list">Business cards</string>
    <string name="select">Select</string>
</resources>