<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_context_edit" android:visible="false" android:title="@string/menu_editContact" />
    <item android:id="@id/menu_context_delete" android:title="@string/menu_deleteContact" />
    <item android:id="@id/menu_context_share_contact_information" android:title="@string/menu_share_contact_info" />
    <item android:id="@id/menu_context_share_namecard_via" android:title="@string/menu_share_via" />
    <item android:id="@id/menu_remove_from_knox" android:title="@string/remove_from_knox" />
    <item android:id="@id/menu_context_join" android:title="@string/menu_joinAggregate" />
    <item android:id="@id/menu_context_add_to_favorite" android:visible="false" android:title="@string/menu_addStar" />
    <item android:id="@id/menu_context_add_to_group" android:visible="false" android:title="@string/menu_add_to_group" />
    <item android:id="@id/menu_context_add_to_reject_list" android:visible="false" android:title="@string/add_2_block_list" />
    <item android:id="@id/menu_context_add_to_private_contact" android:title="@string/menu_add_to_private" />
    <item android:id="@id/menu_context_add_to_white_list" android:title="@string/menu_white_list_setting" />
    <item android:id="@id/menu_context_add_to_black_list" android:title="@string/menu_black_list_setting" />
    <item android:id="@id/menu_context_copy_to_dialing_screen" android:title="@string/menu_copy_to_dialing" />
    <item android:id="@id/menu_context_add_shortcut_to_home" android:title="@string/menu_place_on_home_screen" />
    <item android:id="@id/menu_instance_lettering_favorite" android:title="@string/lettering_activity_title" />
</menu>