<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/tw_action_bar_icon_copy_to_dialingscreen_log" android:id="@id/menu_edit_number_before_call" android:title="@string/menu_copy_to_dialing" />
    <item android:icon="@drawable/APKTOOL_DUMMY_064b" android:id="@id/menu_restore" android:title="@string/restore" />
    <item android:icon="@drawable/tw_action_bar_icon_delete_holo_dark" android:id="@id/menu_remove_from_call_log" android:title="@string/delete" />
    <item android:icon="@drawable/tw_action_bar_icon_send_numbr" android:id="@id/send_number" android:title="@string/send_number" />
    <item android:icon="@drawable/tw_action_bar_icon_addtoreject_holo_dark" android:id="@id/add_reject_list" android:title="@string/add_2_block_list" />
    <item android:icon="@drawable/tw_action_bar_icon_removereject_holo_dark" android:id="@id/remove_reject_list" android:title="@string/delete_from_block_list" />
    <item android:icon="@drawable/tw_action_bar_icon_setblocknumber_holo_dark" android:id="@id/block_settings" android:title="@string/block_settings" />
    <item android:icon="@drawable/tw_action_bar_icon_add_to_white_list" android:id="@id/setting_white_list" android:title="@string/menu_add_to_white_list" />
    <item android:icon="@drawable/tw_action_bar_icon_remove_from_white_list" android:id="@id/setting_remove_from_white_list" android:title="@string/menu_remove_from_white_list" />
    <item android:icon="@drawable/tw_action_bar_icon_add_to_black_list" android:id="@id/setting_black_list" android:title="@string/menu_add_to_black_list" />
    <item android:icon="@drawable/tw_action_bar_icon_remove_from_black_list" android:id="@id/setting_remove_from_black_list" android:title="@string/menu_remove_from_black_list" />
</menu>