<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/action_bar_tab_icon_yellowpage" android:id="@id/menu_yellowpages" android:visible="false" android:orderInCategory="1" android:title="@string/ContactsYellowpage" />
    <item android:icon="@drawable/tw_action_bar_icon_data_roaming_holo_dark" android:id="@id/menu_esurfing_dialing" android:visible="false" android:orderInCategory="1" android:title="@string/eSurfing_dailup_title" android:checkable="true" android:showAsAction="withText" />
    <item android:icon="@drawable/optionmenu_ipcall" android:id="@id/menu_ip_call" android:orderInCategory="1" android:title="@string/ip_call" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_videocall_holo_dark" android:id="@id/menu_video_call" android:orderInCategory="1" android:title="@string/video_call" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_sendmsg_holo_dark" android:id="@id/menu_send_message" android:orderInCategory="1" android:title="@string/menu_send_message" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_addcontact" android:id="@id/menu_add_contacts" android:orderInCategory="1" android:title="@string/add_2_contacts" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_speeddialset_holo_dark" android:id="@id/menu_speed_dial_settings" android:orderInCategory="1" android:title="@string/speed_dial_setting" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_add2sec" android:id="@id/menu_2s_pause" android:orderInCategory="1" android:title="@string/add_2sec_pause" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_add_wait" android:id="@id/menu_add_wait" android:orderInCategory="1" android:title="@string/add_wait" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_onehand" android:orderInCategory="1" android:title="@string/onehand_mode_on" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_data_roaming_holo_dark" android:id="@id/menu_intl_roaming_call" android:visible="false" android:orderInCategory="1" android:title="@string/intl_roaming_call" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_133callback" android:id="@id/menu_callback_call_133" android:visible="false" android:orderInCategory="1" android:title="@string/callback_call_133" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_dialer_ripple_on" android:id="@id/menu_ripple_effect" android:visible="false" android:orderInCategory="1" android:title="@string/ripple_effect" android:checkable="true" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_setting_holo_dark" android:id="@id/menu_call_settings_dialpad" android:orderInCategory="1" android:title="@string/call_settings" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_wifi_calling" android:id="@id/menu_enable_wifi_calling" android:visible="false" android:orderInCategory="1" android:title="@string/enable_wifi_calling" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_help_holo" android:id="@id/menu_help" android:orderInCategory="4" android:title="@string/txt_RAD_info_button" />
</menu>