<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/tw_action_bar_icon_setting_holo_dark" android:id="@id/menu_call_settings_icon" android:title="@string/call_settings" />
    <item android:icon="@drawable/tw_action_bar_icon_setting_holo_dark" android:id="@id/menu_call_settings" android:orderInCategory="3" android:title="@string/call_settings" />
    <item android:icon="@drawable/ic_add_contact" android:id="@id/filter_option" android:title="@string/menu_contacts_filter" />
    <item android:icon="@drawable/tw_action_bar_icon_addcontact" android:id="@id/add_contact" android:title="@string/menu_newContact" />
    <item android:icon="@drawable/tw_action_bar_icon_addtofav_holo_dark" android:id="@id/menu_add_favorite" android:title="@string/menu_addStar" />
    <item android:icon="@drawable/tw_action_bar_icon_removefromfav_holo_dark" android:id="@id/menu_delete_favorite" android:title="@string/menu_removeStar" />
    <item android:icon="@drawable/ic_add_contact" android:id="@id/menu_change_view" android:title="change view" />
    <item android:icon="@drawable/tw_action_bar_icon_swipe" android:id="@id/swipe_to" android:visible="false" android:orderInCategory="2" android:title="@string/swipe_to_call_or_message" android:checkable="true" android:showAsAction="withText" />
</menu>