<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/logs_multi_selection" android:visible="false" android:title="@string/select" />
    <item android:icon="@drawable/tw_action_bar_icon_viewby_holo_dark" android:id="@id/view_by" android:orderInCategory="1" android:title="@string/view_by" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_delete_holo_dark" android:id="@id/delete" android:orderInCategory="1" android:title="@string/delete" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_callduration" android:id="@id/call_duration" android:orderInCategory="1" android:title="@string/call_duration" android:showAsAction="withText" />
    <item android:icon="@drawable/tw_action_bar_icon_search_holo_dark" android:id="@id/search" android:orderInCategory="1" android:title="@string/hint_findContacts" android:showAsAction="withText" />
</menu>